--- a/8.1-alma/Dockerfile
+++ b/8.1-alma/Dockerfile
@@ -4,14 +4,17 @@ ENV DISABLE_EXTENSIONS="xdebug curl enchant exif ftp gd imap ldap odbc snmp sysv
 ENV ENABLE_EXTENSIONS=""
 
 LABEL maintainer="jesse@weisner.ca, chriswood.ca@gmail.com"
-LABEL build_id="1707332622"
+LABEL build_id="1707339354"
 LABEL php_version="8.1.27"
 LABEL alma_version="9"
 
 RUN dnf -y  install \
     http://rpms.remirepo.net/enterprise/remi-release-9.rpm \
   && rpmkeys --import /etc/pki/rpm-gpg/RPM-GPG-KEY-remi* /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-9 \
-  && 	dnf config-manager -q --enable remi remi-php81 >/dev/null \
+  # && 	dnf config-manager -q --enable remi remi-php81 >/dev/null \
+  && dnf config-manager --set-enabled crb \
+  && dnf module reset php \
+  && dnf module enable -y php:remi-8.1 \
   && dnf -y install \
     bzip2 \
     fcgiwrap \
@@ -26,7 +29,6 @@ RUN dnf -y  install \
     php-gmp-8.1.27 \
     php-imap-8.1.27 \
     php-intl-8.1.27 \
-    php-json-8.1.27 \
     php-ldap-8.1.27 \
     php-mbstring-8.1.27 \
     php-mysqlnd-8.1.27 \
@@ -42,7 +44,6 @@ RUN dnf -y  install \
     php-sodium-8.1.27 \
     php-tidy-8.1.27 \
     php-xml-8.1.27 \
-    php-xmlrpc-8.1.27 \
     php-pecl-amqp \
     php-pecl-ast \
     php-pecl-couchbase \
@@ -67,8 +68,8 @@ RUN dnf -y  install \
     php-pear \
   && rm -rf /var/cache/dnf
 
-COPY --from=local/php-fpm:8.1-alma-builder-b1707332622 /etc/php.d/20-timezonedb.ini /etc/php.d/20-timezonedb.ini
-COPY --from=local/php-fpm:8.1-alma-builder-b1707332622 /usr/lib64/php/modules/timezonedb.so /usr/lib64/php/modules/timezonedb.so
+COPY --from=local/php-fpm-alma:8.1-alma-builder-b1707339354 /etc/php.d/20-timezonedb.ini /etc/php.d/20-timezonedb.ini
+COPY --from=local/php-fpm-alma:8.1-alma-builder-b1707339354 /usr/lib64/php/modules/timezonedb.so /usr/lib64/php/modules/timezonedb.so
 
 ADD https://raw.githubusercontent.com/php/php-src/PHP-8.1.27/php.ini-development /etc/php.ini-development
 ADD https://raw.githubusercontent.com/docker-library/php/master/docker-php-ext-enable /usr/local/bin/docker-php-ext-enable
