--- a/8.2-alma/Dockerfile
+++ b/8.2-alma/Dockerfile
@@ -4,14 +4,17 @@ ENV DISABLE_EXTENSIONS="xdebug curl enchant exif ftp gd imap ldap odbc snmp sysv
 ENV ENABLE_EXTENSIONS=""
 
 LABEL maintainer="jesse@weisner.ca, chriswood.ca@gmail.com"
-LABEL build_id="1707332622"
+LABEL build_id="1707339354"
 LABEL php_version="8.2.15"
 LABEL alma_version="9"
 
 RUN dnf -y  install \
     http://rpms.remirepo.net/enterprise/remi-release-9.rpm \
   && rpmkeys --import /etc/pki/rpm-gpg/RPM-GPG-KEY-remi* /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-9 \
-  && 	dnf config-manager -q --enable remi remi-php82 >/dev/null \
+  # && 	dnf config-manager -q --enable remi remi-php82 >/dev/null \
+  && dnf config-manager --set-enabled crb \
+  && dnf module reset php \
+  && dnf module enable -y php:remi-8.2 \
   && dnf -y install \
     bzip2 \
     fcgiwrap \
@@ -26,7 +29,6 @@ RUN dnf -y  install \
     php-gmp-8.2.15 \
     php-imap-8.2.15 \
     php-intl-8.2.15 \
-    php-json-8.2.15 \
     php-ldap-8.2.15 \
     php-mbstring-8.2.15 \
     php-mysqlnd-8.2.15 \
@@ -42,7 +44,6 @@ RUN dnf -y  install \
     php-sodium-8.2.15 \
     php-tidy-8.2.15 \
     php-xml-8.2.15 \
-    php-xmlrpc-8.2.15 \
     php-pecl-amqp \
     php-pecl-ast \
     php-pecl-couchbase \
@@ -63,13 +64,12 @@ RUN dnf -y  install \
     php-pecl-yaml \
     php-pecl-zip \
     php-pecl-zmq \
-    php-pecl-wddx \
     php-8.2.15 \
     php-pear \
   && rm -rf /var/cache/dnf
 
-COPY --from=local/php-fpm:8.2-alma-builder-b1707332622 /etc/php.d/20-timezonedb.ini /etc/php.d/20-timezonedb.ini
-COPY --from=local/php-fpm:8.2-alma-builder-b1707332622 /usr/lib64/php/modules/timezonedb.so /usr/lib64/php/modules/timezonedb.so
+COPY --from=local/php-fpm-alma:8.2-alma-builder-b1707339354 /etc/php.d/20-timezonedb.ini /etc/php.d/20-timezonedb.ini
+COPY --from=local/php-fpm-alma:8.2-alma-builder-b1707339354 /usr/lib64/php/modules/timezonedb.so /usr/lib64/php/modules/timezonedb.so
 
 ADD https://raw.githubusercontent.com/php/php-src/PHP-8.2.15/php.ini-development /etc/php.ini-development
 ADD https://raw.githubusercontent.com/docker-library/php/master/docker-php-ext-enable /usr/local/bin/docker-php-ext-enable
