--- a/8.2-alma/Dockerfile
+++ b/8.2-alma/Dockerfile
@@ -1,18 +1,19 @@
-FROM bcit.io/almalinux:9-latest
+FROM bcit.io/almalinux:8-latest
 
-ENV DISABLE_EXTENSIONS="xdebug curl enchant exif ftp gd imap ldap odbc snmp sysvmsg sysvsem sysvshm pdo_odbc amqp ast imagick mailparse ssh2 vips zmq couchbase"
+ENV DISABLE_EXTENSIONS="xdebug curl enchant exif ftp gd imap ldap odbc snmp sysvmsg sysvsem sysvshm pdo_odbc amqp ast imagick mailparse ssh2 vips zmq couchbase oci8"
 ENV ENABLE_EXTENSIONS=""
 
 LABEL maintainer="jesse@weisner.ca, chriswood.ca@gmail.com"
-LABEL build_id="1707339354"
+LABEL build_id="1707420499"
 LABEL php_version="8.2.15"
-LABEL alma_version="9"
+LABEL alma_version="8"
 
+# PHP
 RUN dnf -y  install \
-    http://rpms.remirepo.net/enterprise/remi-release-9.rpm \
-  && rpmkeys --import /etc/pki/rpm-gpg/RPM-GPG-KEY-remi* /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-9 \
-  # && 	dnf config-manager -q --enable remi remi-php82 >/dev/null \
-  && dnf config-manager --set-enabled crb \
+    http://rpms.remirepo.net/enterprise/remi-release-8.rpm \
+  && rpmkeys --import /etc/pki/rpm-gpg/RPM-GPG-KEY-remi* /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-8 \
+  && 	dnf config-manager -q --enable remi >/dev/null \
+  && dnf config-manager --set-enabled powertools \
   && dnf module reset php \
   && dnf module enable -y php:remi-8.2 \
   && dnf -y install \
@@ -68,9 +69,24 @@ RUN dnf -y  install \
     php-pear \
   && rm -rf /var/cache/dnf
 
-COPY --from=local/php-fpm-alma:8.2-alma-builder-b1707339354 /etc/php.d/20-timezonedb.ini /etc/php.d/20-timezonedb.ini
-COPY --from=local/php-fpm-alma:8.2-alma-builder-b1707339354 /usr/lib64/php/modules/timezonedb.so /usr/lib64/php/modules/timezonedb.so
+# PECL
+COPY --from=local/php-fpm-alma:8.2-alma-builder-b1707420499 /etc/php.d/20-timezonedb.ini /etc/php.d/20-timezonedb.ini
+COPY --from=local/php-fpm-alma:8.2-alma-builder-b1707420499 /usr/lib64/php/modules/timezonedb.so /usr/lib64/php/modules/timezonedb.so
 
+# OCI / Instant Client
+ADD instantclient.repo /etc/yum.repos.d/instantclient.repo
+ADD https://yum.oracle.com/RPM-GPG-KEY-oracle-ol8 /etc/pki/rpm-gpg/RPM-GPG-KEY-oracle
+RUN rpmkeys --import /etc/pki/rpm-gpg/RPM-GPG-KEY-oracle \
+ && dnf -y -d2 install \
+    php-oci8 \
+    oracle-instantclient-basic \
+    oracle-instantclient-devel \
+    oracle-instantclient-sqlplus \
+#  && rm -rf /var/cache/yum \
+ && echo /usr/lib/oracle/21/client64/lib > /etc/ld.so.conf.d/oracle-instantclient.conf \
+ && ldconfig
+
+## PHP configs
 ADD https://raw.githubusercontent.com/php/php-src/PHP-8.2.15/php.ini-development /etc/php.ini-development
 ADD https://raw.githubusercontent.com/docker-library/php/master/docker-php-ext-enable /usr/local/bin/docker-php-ext-enable
 ADD https://raw.githubusercontent.com/renatomefi/php-fpm-healthcheck/master/php-fpm-healthcheck /usr/local/bin/php-fpm-healthcheck
